--- a/config/database.yml
+++ b/config/database.yml
@@ -3,6 +3,9 @@ development:
   encoding: utf8
   reconnect: false
   database: rails_birthday_development
-  pool: 5
+  host: database
+  port: 3306
   username: root
-  password: <REDACTED>
+  password: root
+  socket: /var/run/mysqld/mysqlx.sock
+  pool: 5
